--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,30 +6,32 @@ before:
     - go mod tidy
 
 builds:
-  - main: ./cmd/wait-for-tcp/main.go
-  - env:
+  - id: wait-for-tcp-build
+    main: ./cmd/wait-for-tcp/main.go
+    env:
       - CGO_ENABLED=0
+    binary: mybin
     goos:
       - linux
+    goarch:
+      - amd64
+      - arm64
 dockers:
-  - id: ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}
-    goos: linux
-    goarch: amd64
-    image_templates:
-      - ghcr.io/containeroo/wait-for-tcp:latest
-      - ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}
+  - image_templates:
+      - "ghcr.io/containeroo/wait-for-tcp:{{ .Tag }}-amd64"
     use: buildx
+    dockerfile: Dockerfile
     build_flag_templates:
-      - --pull
-      - --platform=linux/amd64
-      - --label=org.opencontainers.image.title={{ .ProjectName }}
-      - --label=org.opencontainers.image.description={{ .ProjectName }}
-      - --label=org.opencontainers.image.url=https://github.com/containeroo/wait-for-tcp
-      - --label=org.opencontainers.image.source=https://github.com/containeroo/wait-for-tcp
-      - --label=org.opencontainers.image.version={{ trimprefix .Version "v" }}
-      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
-      - --label=org.opencontainers.image.revision={{ .FullCommit }}
-      - --label=org.opencontainers.image.licenses="GNU General Public License v3.0"
-    extra_files:
-      - go.mod
-      - cmd
+      - "--platform=linux/amd64"
+  - image_templates:
+      - "ghcr.io/containeroo/wait-for-tcp:{{ .Tag }}-arm64v8"
+    use: buildx
+    goarch: arm64
+    dockerfile: Dockerfile
+    build_flag_templates:
+      - "--platform=linux/arm64/v8"
+docker_manifests:
+  - name_template: "ghcr.io/containeroo/wait-for-tcp:{{ .Tag }}"
+    image_templates:
+      - "ghcr.io/containeroo/wait-for-tcp:{{ .Tag }}-amd64"
+      - "ghcr.io/containeroo/wait-for-tcp:{{ .Tag }}-arm64v8"
