--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,9 +15,11 @@ builds:
     goarch:
       - amd64
       - arm64
+
 dockers:
   - image_templates:
-      - ghcr.io/containeroo/wait-for-tcp:{{ timprefix .Tag "v" }}-amd64
+      - ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}-amd64
+      - ghcr.io/containeroo/wait-for-tcp:latest-amd64
     use: buildx
     dockerfile: Dockerfile
     build_flag_templates:
@@ -26,7 +28,8 @@ dockers:
       - go.mod
       - cmd
   - image_templates:
-      - ghcr.io/containeroo/wait-for-tcp:{{ trimprefix.Tag "v" }}-arm64v8
+      - ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}-arm64v8
+      - ghcr.io/containeroo/wait-for-tcp:latest-arm64v8
     use: buildx
     goarch: arm64
     dockerfile: Dockerfile
@@ -35,8 +38,13 @@ dockers:
     extra_files:
       - go.mod
       - cmd
+
 docker_manifests:
   - name_template: ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}
     image_templates:
       - ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}-amd64
       - ghcr.io/containeroo/wait-for-tcp:{{ trimprefix .Tag "v" }}-arm64v8
+  - name_template: ghcr.io/containeroo/wait-for-tcp:latest
+    image_templates:
+      - ghcr.io/containeroo/wait-for-tcp:latest-amd64
+      - ghcr.io/containeroo/wait-for-tcp:latest-arm64v8
